# Task-rainwater

./: CMakeLists.txt  CMakeLists.txt.user.f2246e1  README.md  customvalidator.cpp  customvalidator.h  integertextitem.cpp  integertextitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixoperations.cpp  matrixoperations.h  matrixworker.cpp  matrixworker.h  scenebuilder.cpp  scenebuilder.h  singleton.cpp  singleton.h  squareitem.cpp  squareitem.h  workerthread.cpp  workerthread.h
